# django-project-pet

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  queries.sql  requirements.txt
myproject/accounts/: models.py  tests.py  urls.py  views.py
myproject/accounts/migrations/: 0001_initial.py
myproject/accounts/templates/accounts/: about-me.html  base.html  login.html  register_form.html  user-order-list.html
myproject/blogapp/: admin.py  models.py  sitemap.py  urls.py  views.py
myproject/blogapp/migrations/: 0001_initial.py
myproject/blogapp/templates/blogapp/: article_detail.html  article_list.html  base.html
myproject/locale/en/LC_MESSAGES/: django.po
myproject/locale/ru/LC_MESSAGES/: django.po
myproject/myproject/: settings.py  sitemaps.py  urls.py
myproject/shopapiapp/: apps.py  serializers.py  urls.py  views.py
myproject/shopapp/: admin.py  admin_mixins.py  common.py  forms.py  middlewares.py  models.py  sitemap.py  tests.py  urls.py  views.py
myproject/shopapp/fixtures/: orders-fixture.json  orders-fixture.xml  product-fixtures.json  products-fixture.json  products-fixture.xml
myproject/shopapp/management/commands/: agg.py  bulk_actions.py  create_products.py  selected_fields.py
myproject/shopapp/migrations/: 0001_initial.py  0002_order.py  0003_order_user.py  0004_order_products.py  0005_product_archived.py  0006_productimage.py  0007_product_preview.py  0008_alter_product_description_alter_product_name.py
myproject/shopapp/templates/shopapp/: group-list.html  index.html  order-detail.html  order-list.html  order_form.html  (+8 more)
