[tool.poetry]
name = "django-project-pet"
version = "0.1.0"
description = ""
authors = ["Zaripov Ildar <zaripow.ildar@yandex.ru>"]


[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
djangorestframework = "^3.14.0"
django-debug-toolbar = "^4.1.0"
drf-spectacular = "^0.26.4"
docutils = "^0.20.1"
flake8 = "^6.1.0"
gunicorn = "^21.2.0"
pillow = "^10.0.0"
django-filter = "^23.2"
python-dotenv = "^1.0.0"
sentry-sdk = "^1.29.2"
flake8-docstrings = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
